@@ -1,3 +1,8 @@
+2012-06-18  Sancho Lerena <slerena@artica.es>
+
+	* install.php: Small modifications in step3, bad render
+	in chrome.
+
 2012-06-18  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_menu.php: Added categories in the
